<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sitios_turisticos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.appturisticas.especializacion.valleturistica.Sitios.SitiosTuristicosActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <Button
            android:text="@string/visualizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnSitioVisualizar"
            android:layout_centerHorizontal="true" />

        <Button
            android:text="@string/adicionar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnSitioAdicionar"
            android:layout_centerHorizontal="true"/>

        <Button
            android:text="@string/modificar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnSitioModificar"
            android:layout_centerHorizontal="true"/>

        <Button
            android:text="@string/borrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnSitioBorrar"
            android:layout_centerHorizontal="true"/>

    </LinearLayout>

</RelativeLayout>
