<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.appturisticas.especializacion.valleturistica.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <Button
            android:text="@string/sitios_turisticos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnSitiosTuristicos"
            android:layout_centerHorizontal="true" />

        <Button
            android:text="@string/hoteles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnHoteles"
            android:layout_centerHorizontal="true"/>

        <Button
            android:text="@string/operadores_turisticos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnOperadores"
            android:layout_centerHorizontal="true"/>

    </LinearLayout>

</LinearLayout>
